added some icons and textures, animated scrolling

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title></title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<title>leehsueh</title>
+	<meta name="description" content="Hain-Lee Hsueh's webby and online portfolio">
+	<meta name="author" content="Hain-Lee Hsueh">
 
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -20,20 +20,68 @@
 <body>
 
 <div id="container">
-	<header>
-
+	<header class="section" id="section-0">
+		<h1>leehsueh.com</h1>
+		<h2>(lēē&middot;shāy)</h2>
+		<nav id="side-nav">
+		
+		<ul>
+			<li><a href="#section-1">About Me</a></li>
+			<li><a href="#section-2">Projects</a></li>
+			<li id="topLink"><a href="#section-0"></a></li>
+		</ul>
+		</nav>
+		<p>Hi, I'm Hain-Lee!</p>
+		<ul id="cards">
+			<li class="cardshadow"><a href="http://facebook.com/leehsueh"><img src="images/icons/facebook-128x128.png" />Facebook</a>
+			<span class="shr_cardshadow"></span>
+			<span class="shl_cardshadow"></span>
+			</li>
+			<li class="cardshadow"><a href="http://linkedin.com/in/leehsueh"><img src="images/icons/linkedin-128x128.png" />LinkedIn</a>
+			<span class="shr_cardshadow"></span>
+			<span class="shl_cardshadow"></span>
+			</li>
+			<li class="cardshadow"><a href="http://github.com/leehsueh"><img src="images/icons/github-128x128.png" />GitHub</a>
+			<span class="shr_cardshadow"></span>
+			<span class="shl_cardshadow"></span>
+			</li>
+		</ul>
 	</header>
 	<div id="main" role="main">
-
+		<div class="section cardshadow" id="section-1">
+			<article>
+			<header>
+			<h1>About Me</h1>
+			</header>
+			<p>
+Magna sed montes ridiculus, placerat nisi. Dolor mid? Urna, est parturient integer, cras pulvinar aenean, ac etiam ridiculus! In ut! Pulvinar, placerat hac odio scelerisque risus. Diam sagittis? Adipiscing ut magna ridiculus, integer mauris sagittis turpis magna. Nec, montes, vel! Massa mid rhoncus quis, nunc, magnis, porttitor, ut. Pellentesque magna adipiscing aliquet vut porttitor? Et lectus ac in in, eu, a sed augue vut vel? Diam et dapibus? Sit, nisi cum auctor, aliquam tristique etiam augue in a! Porta pulvinar, tortor! Placerat vel urna? Porttitor aliquet adipiscing? Purus placerat dolor! In nec, nec habitasse placerat enim ac pulvinar augue et etiam turpis penatibus in auctor elementum, sociis vel! Risus montes magna mus. Cursus porta! Facilisis augue, sociis tristique porta, amet.</p>
+			<p>
+Arcu augue montes! Pid ut mid aenean tincidunt tempor pulvinar massa? Turpis etiam elementum integer mid scelerisque duis amet phasellus scelerisque rhoncus purus? Nunc porta, ultrices porta. Dignissim nunc! Nec magnis? Cum velit, pulvinar quis lectus turpis duis, dictumst! Nisi magna, in elementum nunc, ac ac et? Purus! Odio facilisis proin! Turpis dignissim magna, cum? Nisi amet ultrices nascetur! Quis amet! Tristique ac vut in turpis elit, velit, ut lundium urna, dis ut phasellus, vut turpis nec mus rhoncus integer, mid montes odio, eu, dolor eu eros! Odio nec tempor non ut amet duis platea sociis mus placerat elementum sed porta integer integer, scelerisque penatibus tincidunt purus! Lorem dolor? Mus aenean? Mus quis, mattis, lundium? Tempor sit augue tortor.
+			</p>
+			</article>
+		</div>
+		<div class="section cardshadow" id="section-2">
+			<article>
+			<header>
+			<h1>Projects</h1>
+			</header>
+			<p>
+Magna sed montes ridiculus, placerat nisi. Dolor mid? Urna, est parturient integer, cras pulvinar aenean, ac etiam ridiculus! In ut! Pulvinar, placerat hac odio scelerisque risus. Diam sagittis? Adipiscing ut magna ridiculus, integer mauris sagittis turpis magna. Nec, montes, vel! Massa mid rhoncus quis, nunc, magnis, porttitor, ut. Pellentesque magna adipiscing aliquet vut porttitor? Et lectus ac in in, eu, a sed augue vut vel? Diam et dapibus? Sit, nisi cum auctor, aliquam tristique etiam augue in a! Porta pulvinar, tortor! Placerat vel urna? Porttitor aliquet adipiscing? Purus placerat dolor! In nec, nec habitasse placerat enim ac pulvinar augue et etiam turpis penatibus in auctor elementum, sociis vel! Risus montes magna mus. Cursus porta! Facilisis augue, sociis tristique porta, amet.</p>
+			<p>
+Arcu augue montes! Pid ut mid aenean tincidunt tempor pulvinar massa? Turpis etiam elementum integer mid scelerisque duis amet phasellus scelerisque rhoncus purus? Nunc porta, ultrices porta. Dignissim nunc! Nec magnis? Cum velit, pulvinar quis lectus turpis duis, dictumst! Nisi magna, in elementum nunc, ac ac et? Purus! Odio facilisis proin! Turpis dignissim magna, cum? Nisi amet ultrices nascetur! Quis amet! Tristique ac vut in turpis elit, velit, ut lundium urna, dis ut phasellus, vut turpis nec mus rhoncus integer, mid montes odio, eu, dolor eu eros! Odio nec tempor non ut amet duis platea sociis mus placerat elementum sed porta integer integer, scelerisque penatibus tincidunt purus! Lorem dolor? Mus aenean? Mus quis, mattis, lundium? Tempor sit augue tortor.
+			</p>
+			</article>
+		</div>
 	</div>
 	<footer>
-
+	<p>Copyright &copy; 2011 Hain-Lee Hsueh</p>
 	</footer>
 </div> <!--! end of #container -->
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
 
+<script src="js/libs/jquery.ui.totop.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
