--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 	<meta name="author" content="Hain-Lee Hsueh">
 
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-
+    
+    <link href="http://fonts.googleapis.com/css?family=Crimson Text&subset=latin" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Nunito&subset=latin" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="css/style.css">
 
 	<script src="js/libs/modernizr-2.0.6.min.js"></script>
@@ -81,7 +83,7 @@ Arcu augue montes! Pid ut mid aenean tincidunt tempor pulvinar massa? Turpis eti
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
 
-<script src="js/libs/jquery.ui.totop.js"></script>
+<script src="js/libs/jquery-ui-1.8.16.custom.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
