--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 			<li id="topLink"><a href="#section-0"></a></li>
 		</ul>
 		</nav>
-		<p>Hi, I'm Hain-Lee!</p>
+		<p>Hi, I'm Hain-Lee!
+		</p>
 		<ul id="cards">
 			<li class="cardshadow"><a href="http://facebook.com/leehsueh"><img src="images/icons/facebook-128x128.png" />Facebook</a>
 			<span class="shr_cardshadow"></span>
@@ -50,30 +51,45 @@
 		</ul>
 	</header>
 	<div id="main" role="main">
-		<div class="section cardshadow" id="section-1">
+		<section class="section cardshadow" id="section-1">
 			<article>
 			<header>
 			<h1>About Me</h1>
 			</header>
 			<p>
-Magna sed montes ridiculus, placerat nisi. Dolor mid? Urna, est parturient integer, cras pulvinar aenean, ac etiam ridiculus! In ut! Pulvinar, placerat hac odio scelerisque risus. Diam sagittis? Adipiscing ut magna ridiculus, integer mauris sagittis turpis magna. Nec, montes, vel! Massa mid rhoncus quis, nunc, magnis, porttitor, ut. Pellentesque magna adipiscing aliquet vut porttitor? Et lectus ac in in, eu, a sed augue vut vel? Diam et dapibus? Sit, nisi cum auctor, aliquam tristique etiam augue in a! Porta pulvinar, tortor! Placerat vel urna? Porttitor aliquet adipiscing? Purus placerat dolor! In nec, nec habitasse placerat enim ac pulvinar augue et etiam turpis penatibus in auctor elementum, sociis vel! Risus montes magna mus. Cursus porta! Facilisis augue, sociis tristique porta, amet.</p>
-			<p>
-Arcu augue montes! Pid ut mid aenean tincidunt tempor pulvinar massa? Turpis etiam elementum integer mid scelerisque duis amet phasellus scelerisque rhoncus purus? Nunc porta, ultrices porta. Dignissim nunc! Nec magnis? Cum velit, pulvinar quis lectus turpis duis, dictumst! Nisi magna, in elementum nunc, ac ac et? Purus! Odio facilisis proin! Turpis dignissim magna, cum? Nisi amet ultrices nascetur! Quis amet! Tristique ac vut in turpis elit, velit, ut lundium urna, dis ut phasellus, vut turpis nec mus rhoncus integer, mid montes odio, eu, dolor eu eros! Odio nec tempor non ut amet duis platea sociis mus placerat elementum sed porta integer integer, scelerisque penatibus tincidunt purus! Lorem dolor? Mus aenean? Mus quis, mattis, lundium? Tempor sit augue tortor.
+			<ul>
+				<li>True Jesus Church Christian</li>
+				<li>(Prospective) Master's in Learning, Design, and Technology from Stanford</li>
+				<li>Applications Developer/Engineer at Oracle</li>
+				<li>Bachelor's in Electrical and Computer Engineering from Cornell</li>
+				<li>Tennis Fanatic</li>
+				<li>Classical Cellist</li>
+				<li>Photographer Wannabe</li>
+				<li>random dood with a longboard</li>
+			</ul>
 			</p>
+
 			</article>
-		</div>
-		<div class="section cardshadow" id="section-2">
+		</section>
+		<section class="section cardshadow" id="section-2">
 			<article>
 			<header>
 			<h1>Projects</h1>
 			</header>
-			<p>
-Magna sed montes ridiculus, placerat nisi. Dolor mid? Urna, est parturient integer, cras pulvinar aenean, ac etiam ridiculus! In ut! Pulvinar, placerat hac odio scelerisque risus. Diam sagittis? Adipiscing ut magna ridiculus, integer mauris sagittis turpis magna. Nec, montes, vel! Massa mid rhoncus quis, nunc, magnis, porttitor, ut. Pellentesque magna adipiscing aliquet vut porttitor? Et lectus ac in in, eu, a sed augue vut vel? Diam et dapibus? Sit, nisi cum auctor, aliquam tristique etiam augue in a! Porta pulvinar, tortor! Placerat vel urna? Porttitor aliquet adipiscing? Purus placerat dolor! In nec, nec habitasse placerat enim ac pulvinar augue et etiam turpis penatibus in auctor elementum, sociis vel! Risus montes magna mus. Cursus porta! Facilisis augue, sociis tristique porta, amet.</p>
-			<p>
-Arcu augue montes! Pid ut mid aenean tincidunt tempor pulvinar massa? Turpis etiam elementum integer mid scelerisque duis amet phasellus scelerisque rhoncus purus? Nunc porta, ultrices porta. Dignissim nunc! Nec magnis? Cum velit, pulvinar quis lectus turpis duis, dictumst! Nisi magna, in elementum nunc, ac ac et? Purus! Odio facilisis proin! Turpis dignissim magna, cum? Nisi amet ultrices nascetur! Quis amet! Tristique ac vut in turpis elit, velit, ut lundium urna, dis ut phasellus, vut turpis nec mus rhoncus integer, mid montes odio, eu, dolor eu eros! Odio nec tempor non ut amet duis platea sociis mus placerat elementum sed porta integer integer, scelerisque penatibus tincidunt purus! Lorem dolor? Mus aenean? Mus quis, mattis, lundium? Tempor sit augue tortor.
-			</p>
+			<section>
+			<h2>Put It Away</h2>
+			<p>description</p>
+			</section>
+			<section>
+			<h2>Bible Tidbits</h2>
+			<p>description</p>
+			</section>
+			<section>
+			<h2>Project 3</h2>
+			<p>description</p>
+			</section>
 			</article>
-		</div>
+		</section>
 	</div>
 	<footer>
 	<p>Copyright &copy; 2011 Hain-Lee Hsueh</p>
