--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     
     <link href="http://fonts.googleapis.com/css?family=Crimson Text&subset=latin" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Nunito&subset=latin" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Gloria Hallelujah&subset=latin" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="css/style.css">
 
 	<script src="js/libs/modernizr-2.0.6.min.js"></script>
@@ -26,16 +27,20 @@
 		<h1>leehsueh.com</h1>
 		<h2>(lēē&middot;shāy)</h2>
 		<nav id="side-nav">
-		
+		<img src="images/head.png">
 		<ul>
 			<li><a href="#section-1">About Me</a></li>
 			<li><a href="#section-2">Projects</a></li>
-			<li id="topLink"><a href="#section-0"></a></li>
+			<li id="topLink"><a href="#section-0">[top]</a></li>
 		</ul>
 		</nav>
-		<p>Hi, I'm Hain-Lee!
-		</p>
+		<p>Hi, I'm Hain-Lee!</p>
+        <p>I'm currently a graduate student in the <a href="http://suse-ldt.stanford.edu">Learning, Design, and Technology</a> program at Stanford University.</p>
 		<ul id="cards">
+            <li class="cardshadow"><a href="http://blog.leehsueh.com"><img src="images/icons/wordpress-128x128.png" />Blog</a>
+    		<span class="shr_cardshadow"></span>
+			<span class="shl_cardshadow"></span>
+			</li>
 			<li class="cardshadow"><a href="http://facebook.com/leehsueh"><img src="images/icons/facebook-128x128.png" />Facebook</a>
 			<span class="shr_cardshadow"></span>
 			<span class="shl_cardshadow"></span>
@@ -57,16 +62,17 @@
 			<h1>About Me</h1>
 			</header>
 			<p>
-			<ul>
-				<li>True Jesus Church Christian</li>
-				<li>(Prospective) Master's in Learning, Design, and Technology from Stanford</li>
-				<li>Applications Developer/Engineer at Oracle</li>
-				<li>Bachelor's in Electrical and Computer Engineering from Cornell</li>
+			<ol>
+				<li><a href="http://tjc.org">True Jesus Church</a> Christian</li>
+				<li>(Prospective) Master's in <a href="http://suse-ldt.stanford.edu">Learning, Design, and Technology</a> from <a href="http://stanford.edu">Stanford</a></li>
+				<li>Applications Developer/Engineer at <a href="http://oracle.com">Oracle</a></li>
+				<li>Bachelor's in <a href="http://www.ece.cornell.edu">Electrical and Computer Engineering</a> from <a href="http://cornell.edu">Cornell</a></li>
 				<li>Tennis Fanatic</li>
 				<li>Classical Cellist</li>
 				<li>Photographer Wannabe</li>
 				<li>random dood with a longboard</li>
-			</ul>
+			</ol>
+            I also have a <a href="http://site.leehsueh.com/docs/resume.pdf">resume</a>!
 			</p>
 
 			</article>
@@ -77,16 +83,20 @@
 			<h1>Projects</h1>
 			</header>
 			<section>
-			<h2>Put It Away</h2>
-			<p>description</p>
+			<h2><a href="http://put-it-away.leehsueh.com">Put It Away</a></h2>
+			<p>An iPad app that teaches kids (particularly for kids with autism) how to clean a room. Originally created as a final project for CS193P at Stanford.</p>
 			</section>
 			<section>
-			<h2>Bible Tidbits</h2>
-			<p>description</p>
+			<h2><a href="http://bibleapps.leehsueh.com/tidbits">Bible Tidbits</a></h2>
+			<p>Personal web tool for creating notes (or tidbits) associated with one or more Bible passages. Developed using Django, HTML5 elements, and jquery.</p>
 			</section>
 			<section>
-			<h2>Project 3</h2>
-			<p>description</p>
+			<h2><a href="http://bibleapps.leehsueh.com/ntgreek">NT Greek Vocabulary</a></h2>
+			<p>Flash cards for New Testament Greek vocabulary terms. Developed using Django, HTML5 elements, and jquery.</p>
+			</section>
+            <section>
+    		<h2><a href="http://site.leehsueh.com">Personal Website</a></h2>
+			<p>My first PHP/MySQL driven website, which served as a comprehensive personal site and extended resume.</p>
 			</section>
 			</article>
 		</section>
