got rid of those border shadows

--- a/index.html
+++ b/index.html
@@ -27,31 +27,23 @@
 		<h1>leehsueh.com</h1>
 		<h2>(lēē&middot;shāy)</h2>
 		<nav id="side-nav">
-		<img src="images/head.png">
-		<ul>
-			<li><a href="#section-1">About Me</a></li>
-			<li><a href="#section-2">Projects</a></li>
-			<li id="topLink"><a href="#section-0">[top]</a></li>
-		</ul>
+			<ul>
+				<li><a href="#section-0"><img src="images/head.png"></a></li>
+				<li><a href="#section-1">About Me</a></li>
+				<li><a href="#section-2">Projects</a></li>
+				<li id="topLink"><a href="#section-0">[top]</a></li>
+			</ul>
 		</nav>
 		<p>Hi, I'm Hain-Lee!</p>
         <p>I'm currently a graduate student in the <a href="http://suse-ldt.stanford.edu">Learning, Design, and Technology</a> program at Stanford University.</p>
 		<ul id="cards">
             <li class="cardshadow"><a href="http://blog.leehsueh.com"><img src="images/icons/wordpress-128x128.png" />Blog</a>
-    		<span class="shr_cardshadow"></span>
-			<span class="shl_cardshadow"></span>
 			</li>
 			<li class="cardshadow"><a href="http://facebook.com/leehsueh"><img src="images/icons/facebook-128x128.png" />Facebook</a>
-			<span class="shr_cardshadow"></span>
-			<span class="shl_cardshadow"></span>
 			</li>
 			<li class="cardshadow"><a href="http://linkedin.com/in/leehsueh"><img src="images/icons/linkedin-128x128.png" />LinkedIn</a>
-			<span class="shr_cardshadow"></span>
-			<span class="shl_cardshadow"></span>
 			</li>
 			<li class="cardshadow"><a href="http://github.com/leehsueh"><img src="images/icons/github-128x128.png" />GitHub</a>
-			<span class="shr_cardshadow"></span>
-			<span class="shl_cardshadow"></span>
 			</li>
 		</ul>
 	</header>
