changed resume link to google docs

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<li>Photographer Wannabe</li>
 				<li>random dood with a longboard</li>
 			</ol>
-            I also have a <a href="http://site.leehsueh.com/docs/resume.pdf">resume</a>!
+            I also have a <a href="https://docs.google.com/document/d/1EAPyPLYSDdwWMCFx--DGHqQWRJtC6ukLfDXSXgVDPYw/edit">resume</a>!
 			</p>
 
 			</article>
