added profile picture, other layout changes

--- a/ldt-portfolio/index.html
+++ b/ldt-portfolio/index.html
@@ -34,18 +34,29 @@
 
   <div class="row">
     <div class="twelve columns">
-      <h2>leehsueh</h2>
-      <div id="featured">
+      <h1>leehsueh :: LDT Portfolio</h1>
+      <!-- <div id="featured">
         <img src="http://placehold.it/1200x250&text=Slide_1" alt="slide image">
         <img src="http://placehold.it/1200x250&text=Slide_2" alt="slide image">
         <img src="http://placehold.it/1200x250&text=Slide_3" alt="slide image">
-      </div>
-      <p>Stuff I did in the Learning, Design, and Technology program at Stanford.</p>
+      </div> -->
       <hr />
     </div>
   </div>
 
   <div class="row">
+    <div class="six columns">
+      <h3>What? LDT is done already?</h3>
+      <p>One year sure went by quickly. It'd be kind of sad if I didn't have anything to show for it. Fortunately, that's not the case.</p>
+      <p>So, for the sake of posterity, here's all the stuff I did (well, stuff I think is worth mentioning) during the awesome master's program that is <a href="http://ldt.stanford.edu">Learning, Design, and Technology</a>.</p>
+    </div>
+    <div class="six columns">
+      <div id="profile-img-container"><!-- <img src="images/profile.JPG" alt="Hain-Lee Hsueh"> --></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <hr>
     <div class="three columns">
       <dl class="vertical tabs">
         <dd class="active"><a href="#courses-container">Courses</a></dd>
@@ -58,7 +69,7 @@
         <li class="active" id="courses-containerTab">
           <h3>Courses</h3>
           <dl class="tabs pill">
-            <dd class="active"><a href="#fall">Fall 2011</a></dd>
+            <dd><a href="#fall">Fall 2011</a></dd>
             <dd><a href="#winter">Winter 2012</a></dd>
             <dd><a href="#spring">Spring 2012</a></dd>
             <dd><a href="#summer">Summer 2012</a></dd>
@@ -76,6 +87,7 @@
   <div class="row">
     <footer class="twelve rows">
       <p>Copyright &copy; 2012 Hain-Lee Hsueh</p>
+      <p>Built with <a href="http://foundation.zurb.com">Foundation</a>, <a href="http://handlebarsjs.com">Handlebars.js</a>, and <a href="http://lesscss.org">Less</a>.</p>
     </footer>
   </div>
 
