updated home page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</ul>
 		</nav>
 		<p>Hi, I'm Hain-Lee!</p>
-        <p>I'm currently a graduate student in the <a href="http://suse-ldt.stanford.edu">Learning, Design, and Technology</a> program at Stanford University.</p>
+        <p>I'm finishing up my Master's degree in the <a href="http://suse-ldt.stanford.edu">Learning, Design, and Technology</a> program at Stanford University. Here's some <a href="/ldt-portfolio">stuff that I did</a> while I was there.</p>
 		<ul id="cards">
             <li class="cardshadow"><a href="http://blog.leehsueh.com"><img src="images/icons/wordpress-128x128.png" />Blog</a>
 			</li>
@@ -74,6 +74,14 @@
 			<header>
 			<h1>Projects</h1>
 			</header>
+			<section>
+			<h2><a href="/ldt-portfolio">LDT Portfolio</a></h2>
+			<p>A simple site to showcase some of my work in LDT. Built in a couple of hours using Foundation, Handlebars.js, and Less.</p>
+			</section>
+			<section>
+			<h2><a href="http://memu.org">Me.Mu</a></h2>
+			<p>My master's project I did with <a href="http://otterdotter.tumblr.com">Anna Ly</a> to help children/adolescents with autism and ASD learn socio-emotional skills. For this project I had the opportunity to talk with several therapists, visit clinics and centers, storyboard/prototype various ideas, and do a bunch of Kinect+Unity and iOS development.</p>
+			</section>
 			<section>
 			<h2><a href="http://put-it-away.leehsueh.com">Put It Away</a></h2>
 			<p>An iPad app that teaches kids (particularly for kids with autism) how to clean a room. Originally created as a final project for CS193P at Stanford.</p>
